Enhance and clean up star-tree tests (#15587)